@@ -43,8 +43,8 @@ public class LongLocaleConverterTestCase extends BaseLocaleConverterTestCase {
 
         super.setUp();
 
-        defaultValue  = new Long("999");
-        expectedValue = new Long(expectedIntegerValue);
+        defaultValue  = Long.valueOf("999");
+        expectedValue = Long.valueOf(expectedIntegerValue);
 
     }
 
@@ -83,7 +83,7 @@ public class LongLocaleConverterTestCase extends BaseLocaleConverterTestCase {
         // quite happily turning "1,234" into "1"
         // I guess this is one of the limitations of DecimalFormat
         // **************************************************************************
-        convertValueNoPattern(converter, "(B)", defaultIntegerValue, new Long("1"));
+        convertValueNoPattern(converter, "(B)", defaultIntegerValue, Long.valueOf("1"));
 
 
         // **************************************************************************
@@ -92,7 +92,7 @@ public class LongLocaleConverterTestCase extends BaseLocaleConverterTestCase {
         // quite happily turning "1,234" into "1"
         // Again this is one of the limitations of DecimalFormat
         // **************************************************************************
-        convertValueWithPattern(converter, "(B)", localizedIntegerValue, defaultIntegerPattern, new Long("1"));
+        convertValueWithPattern(converter, "(B)", localizedIntegerValue, defaultIntegerPattern, Long.valueOf("1"));
 
 
         // **************************************************************************
